--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,10 +1,7 @@
 section {
-  padding-top: 25px;
-  padding-bottom: 45px;
-  overflow: auto;
   width: 100%;
-  height: calc(100% - 40px);
-}
-
-[app-home] {
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
