--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,7 @@
-<section>
-  <div class="row">
-    <div class="col-sm-12 card-deck">
-      <div class="col-md-4" *ngFor="let book of books['items']" >
-        <app-book-card [book]="book"></app-book-card>
-        <hr />
-      </div>
-    </div>
+<section [ngStyle]="backgroundStyles">
+  <div class="section-overlay"></div>
+  <div class="loader-wrapper" *ngIf="loadingImage">
+    <div class="loader"></div>
   </div>
 </section>
+
