--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,13 +1,19 @@
-<div class="row">
+<div class="row" *ngIf="!user">
   <div class="col-md-12">
-    <button *ngIf="!user" class="btn btn-block btn-info" (click)="userModalLoginVisibility(true)">Login</button>
-  </div>
-  <div class="col-md-12">
-    <button *ngIf="user" class="btn btn-block btn-info" (click)="logout(true)">Logout</button>
+    <button class="btn btn-block btn-info" (click)="userModalLoginVisibility(true)">Login</button>
   </div>
 </div>
 
-
+<div class="row" *ngIf="user">
+  <div class="col-md-8">
+    <button class="btn btn-block btn-info" (click)="logout(true)">
+      Hello, {{user.name}}!
+    </button>
+  </div>
+  <div class="col-md-4">
+    <button class="btn btn-block btn-info" (click)="logout(true)">Logout</button>
+  </div>
+</div>
 
 <div *ngIf="modalVisible"  [@fade]>
   <div class="modal-backdrop"></div>
