--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* global height to cascade use of calc(100% - 'X'px); */
 html, body {
   width: 100%;
   height: 100%;
@@ -8,3 +8,96 @@ html, body {
   width: 100%;
   height: 100%;
 }
+
+/* global section overlay */
+.section-overlay {
+  background: rgba(0,0,0,0.3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1050;
+}
+
+/* global scrollbar */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: #F5F5F5;
+}
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #304489;
+}
+::-moz-selection {
+  background:#304489;
+  color: whitesmoke;
+}
+::selection {
+  background:#304489;
+  color: whitesmoke;
+}
+
+/* global loader */
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #d2d6de;
+  z-index: 8000;
+}
+.loader {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  position: absolute;
+  top: 150px;
+}
+.loader:after {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+}
+.loader {
+  margin: auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(34,53,92, 0.2);
+  border-right: 1.1em solid rgba(34,53,92, 0.2);
+  border-bottom: 1.1em solid rgba(34,53,92, 0.2);
+  border-left: 1.1em solid #22355C;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: loadAnimation 1.1s infinite linear;
+  animation: loadAnimation 1.1s infinite linear;
+}
+@-webkit-keyframes loadAnimation {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes loadAnimation {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+
