--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,30 +1,30 @@
-<div class="row" *ngIf="!user">
+<div class="row" *ngIf="!socialUser">
   <div class="col-md-12">
     <button class="btn btn-block btn-info" (click)="userModalLoginVisibility(true)">Login</button>
   </div>
 </div>
 
-<div class="row" *ngIf="user">
-  <div class="col-md-8">
-    <button class="btn btn-block btn-info" (click)="logout(true)">
-      Hello, {{user.name}}!
-    </button>
+<div class="row" *ngIf="authenticatedUser">
+  <div class="col-md-12 text-right">
+    <img [src]="authenticatedUser.user.picture"
+         id="auth-user-avatar"
+         (mouseenter)="userMenuVisibility(true)"
+    />
   </div>
-  <div class="col-md-4">
-    <button class="btn btn-block btn-info" (click)="logout(true)">Logout</button>
+  <div *ngIf="userMenuVisible" id="auth-user-menu" (mouseleave)="userMenuVisibility(false)" [@slide]>
+
   </div>
 </div>
 
-<div *ngIf="modalVisible"  [@fade]>
+
+<div *ngIf="modalVisible" [@fade]>
   <div class="modal-backdrop"></div>
   <div class="modal">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Welcome to Knowledge Bilbiotheca!</h5>
-          <button class="close" aria-label="Close"
-                  (click)="userModalLoginVisibility(false)"
-          >
+          <button class="close" aria-label="Close" (click)="userModalLoginVisibility(false)">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
