--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,60 @@
-<p>
-  shopping-cart works!
-</p>
+<section>
+  <div class="row">
+    <div class="col-md-9">
+      <div class="col-sm-12">
+        <h1 class="display-5">Shopping cart:</h1>
+        <hr>
+      </div>
+      <div class="col-sm-12" *ngFor="let book of myBasket['rows']">
+        <div class="shop-cart">
+          <div class="row">
+            <div class="col-sm-1">
+              <img src="{{book.thumbnail}}" style="max-height: 61px;" class="img-thumbnail" alt="{{book.title}}" />
+            </div>
+            <div class="col-sm-8 info" style="display: inline;">
+              <h6 class="card-title">{{book.title}}</h6>
+              <p class="card-text">{{book.subtitle}}</p>
+            </div>
+            <div class="col-sm-3 text-right">
+              <h6 class="card-title text-right options">
+                <button class="btn btn-info">
+                  $ {{book.price | price}}
+                </button>
+                <button class="btn btn-danger">
+                  <i class="icon-trash"></i>
+                </button>
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="book-padding"></div>
+      </div>
+      <hr>
+    </div>
+    <div class="col-md-3">
+      <div class="checkout">
+
+        <div class="col-sm-12">
+          <h1 class="display-5">Checkout:</h1>
+          <hr>
+        </div>
+        <div class="col-sm-12">
+          <div class="shop-cart">
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                Total Books:
+                <span class="badge badge-primary badge-pill">{{myBasket['count']}}</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                Total Price
+                <span class="badge badge-primary badge-pill">$ {{total}}</span>
+              </li>
+            </ul>
+            <hr>
+            <button class="btn btn-block btn-primary">Checkout</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
