--- a/src/assets/icons/fontello/css/fontello-codes.css
+++ b/src/assets/icons/fontello/css/fontello-codes.css
@@ -1,9 +1,11 @@
 
+.icon-minus:before { content: '\e800'; } /* '' */
 .icon-basket:before { content: '\e801'; } /* '' */
 .icon-user:before { content: '\e802'; } /* '' */
 .icon-basket-1:before { content: '\e803'; } /* '' */
 .icon-logout-1:before { content: '\e804'; } /* '' */
 .icon-doc-text:before { content: '\f0f6'; } /* '' */
+.icon-plus-squared:before { content: '\f0fe'; } /* '' */
 .icon-file-pdf:before { content: '\f1c1'; } /* '' */
 .icon-trash:before { content: '\f1f8'; } /* '' */
 .icon-address-card:before { content: '\f2bb'; } /* '' */
