--- a/src/assets/icons/fontello/css/fontello.css
+++ b/src/assets/icons/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?15842817');
-  src: url('../font/fontello.eot?15842817#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?15842817') format('woff2'),
-       url('../font/fontello.woff?15842817') format('woff'),
-       url('../font/fontello.ttf?15842817') format('truetype'),
-       url('../font/fontello.svg?15842817#fontello') format('svg');
+  src: url('../font/fontello.eot?17063635');
+  src: url('../font/fontello.eot?17063635#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?17063635') format('woff2'),
+       url('../font/fontello.woff?17063635') format('woff'),
+       url('../font/fontello.ttf?17063635') format('truetype'),
+       url('../font/fontello.svg?17063635#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?15842817#fontello') format('svg');
+    src: url('../font/fontello.svg?17063635#fontello') format('svg');
   }
 }
 */
@@ -55,11 +55,13 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-minus:before { content: '\e800'; } /* '' */
 .icon-basket:before { content: '\e801'; } /* '' */
 .icon-user:before { content: '\e802'; } /* '' */
 .icon-basket-1:before { content: '\e803'; } /* '' */
 .icon-logout-1:before { content: '\e804'; } /* '' */
 .icon-doc-text:before { content: '\f0f6'; } /* '' */
+.icon-plus-squared:before { content: '\f0fe'; } /* '' */
 .icon-file-pdf:before { content: '\f1c1'; } /* '' */
 .icon-trash:before { content: '\f1f8'; } /* '' */
 .icon-address-card:before { content: '\f2bb'; } /* '' */
