--- a/src/assets/icons/fontello/css/fontello-codes.css
+++ b/src/assets/icons/fontello/css/fontello-codes.css
@@ -4,6 +4,7 @@
 .icon-user:before { content: '\e802'; } /* '' */
 .icon-basket-1:before { content: '\e803'; } /* '' */
 .icon-logout-1:before { content: '\e804'; } /* '' */
+.icon-search:before { content: '\e805'; } /* '' */
 .icon-doc-text:before { content: '\f0f6'; } /* '' */
 .icon-plus-squared:before { content: '\f0fe'; } /* '' */
 .icon-file-pdf:before { content: '\f1c1'; } /* '' */
