--- a/src/assets/icons/fontello/css/fontello.css
+++ b/src/assets/icons/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?17063635');
-  src: url('../font/fontello.eot?17063635#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?17063635') format('woff2'),
-       url('../font/fontello.woff?17063635') format('woff'),
-       url('../font/fontello.ttf?17063635') format('truetype'),
-       url('../font/fontello.svg?17063635#fontello') format('svg');
+  src: url('../font/fontello.eot?8933748');
+  src: url('../font/fontello.eot?8933748#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?8933748') format('woff2'),
+       url('../font/fontello.woff?8933748') format('woff'),
+       url('../font/fontello.ttf?8933748') format('truetype'),
+       url('../font/fontello.svg?8933748#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?17063635#fontello') format('svg');
+    src: url('../font/fontello.svg?8933748#fontello') format('svg');
   }
 }
 */
@@ -60,6 +60,7 @@
 .icon-user:before { content: '\e802'; } /* '' */
 .icon-basket-1:before { content: '\e803'; } /* '' */
 .icon-logout-1:before { content: '\e804'; } /* '' */
+.icon-search:before { content: '\e805'; } /* '' */
 .icon-doc-text:before { content: '\f0f6'; } /* '' */
 .icon-plus-squared:before { content: '\f0fe'; } /* '' */
 .icon-file-pdf:before { content: '\f1c1'; } /* '' */
