--- a/src/app/components/book/book.component.html
+++ b/src/app/components/book/book.component.html
@@ -1,3 +1,3 @@
-<p>
-  book works!
-</p>
+<button class="btn btn-block btn-info" (click)="viewBookDetail(book)">
+  <i class="icon-search"></i> View More
+</button>
