--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -21,14 +21,9 @@
           <p class="text-center">Choose any of the social networks listed below to login:</p>
           <hr />
           <div class="row">
-            <div class="col-sm-12 col-md-6">
-              <button class="btn btn-primary btn-block btn-social" (click)="facebookLogin()">
-                <img src="./assets/icons/social/facebook.svg" alt="">
-              </button>
-            </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12">
               <button class="btn btn-primary btn-block btn-social" (click)="googleLogin()">
-                <img src="./assets/icons/social/google.svg" alt="">
+                Login with my google account
               </button>
             </div>
           </div>
