--- a/src/app/components/book-card/book-card.component.css
+++ b/src/app/components/book-card/book-card.component.css
@@ -6,6 +6,11 @@
   height: 240px;
   position: relative;
 }
+@media (max-width: 500px) {
+  .card {
+    height: 350px;
+  }
+}
 .button-row {
   position: absolute;
   bottom: 5px;
