--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -1,5 +1,9 @@
-<button class="btn btn-block btn-primary" (click)="addToBask(book)">
+<button class="btn btn-block btn-primary" *ngIf="user" (click)="addToBask(book)">
   <i class="demo-icon icon-plus-squared"></i> Add to cart
+</button>
+
+<button class="btn btn-block btn-primary" *ngIf="!user" (click)="addToBask(book)">
+  <i class="demo-icon icon-plus-squared"></i> Buy It
 </button>
 
 <app-tipster [config]="tipsterConfig" *ngIf="showTip"></app-tipster>
