--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -2,24 +2,27 @@
   <div class="card-header">{{book.volumeInfo.title}}</div>
   <div class="card-body text-secondary">
     <div class="row">
-      <div class="col-md-3 text-center">
+      <div class="col-xs-3 col-md-3 text-center">
         <img src="{{book.volumeInfo.imageLinks.thumbnail}}" class="img-thumbnail"  alt="">
       </div>
-      <div class="col-md-9">
+      <div class="col-xs-9 col-md-9">
         <div class="row">
           <div class="col-md-12">
             <p class="card-text">{{book.volumeInfo.description | substr}}</p>
           </div>
+          <div class="clearfix"></div>
         </div>
-        <div class="row button-row">
-          <div class="col-md-6">
+        <div class="row button-row"  *ngIf="user">
+          <div class="col-md-5">
             <app-book  [book]="book"></app-book>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-7">
             <app-basket  [book]="book"></app-basket>
           </div>
         </div>
+        <app-book style="width: 100%"  [book]="book"></app-book>
       </div>
     </div>
+    <div class="clearfix"></div>
   </div>
 </div>
