--- a/src/app/components/book/book.component.html
+++ b/src/app/components/book/book.component.html
@@ -1,5 +1,5 @@
 <button class="btn btn-block btn-info" (click)="viewBookDetail(book)">
-  <i class="icon-search"></i> View More
+  <i class="icon-search"></i> Detail
 </button>
 
 <div *ngIf="detail" [@fade]>
@@ -8,36 +8,31 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Welcome to Knowledge Bilbiotheca!</h5>
           <button class="close" aria-label="Close" (click)="userModalLoginVisibility(false)">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <p class="text-center">Choose any of the social networks listed below to login:</p>
-          <hr />
-          <div class="row">
-            <div class="col-sm-12 col-md-6">
-              <button class="btn btn-primary btn-block btn-social" (click)="facebookLogin()">
-                <img src="./assets/icons/social/facebook.svg" alt="">
-              </button>
-            </div>
-            <div class="col-sm-12 col-md-6">
-              <button class="btn btn-primary btn-block btn-social" (click)="googleLogin()">
-                <img src="./assets/icons/social/google.svg" alt="">
-              </button>
-            </div>
+        <div class="modal-body" style="max-height: 400px; overflow: auto;">
+          <h5 class="modal-title">{{book.volumeInfo.title}}</h5>
+          <hr>
+          <div class="text-center">
+            <img src="{{book.volumeInfo.imageLinks.thumbnail}}" alt="">
           </div>
           <hr>
-          <div class="row">
-            <div class="col-sm-12 col-md-12">
-              <button class="btn btn-block"
-                      (click)="userModalLoginVisibility(false)"
-              >
-                Cotinue without login
-              </button>
-            </div>
+          <p>{{book.volumeInfo.description}}</p>
+          <hr>
+        </div>
+        <div>
+          <div class="form-group">
+            <hr>
+            <select class="custom-select" [(ngModel)]="paymentType">
+              <option selected="" value="0">Payment Type</option>
+              <option value="1">Credit Card</option>
+              <option value="2">Ticket</option>
+            </select>
           </div>
+          <p class="text-danger text-center" *ngIf="paymentNotSelected">You <strong>must</strong> select a payment type.</p>
+          <button class="btn btn-block btn-primary" (click)="doCheckout()">Buy It</button>
           <hr>
           <p class="text-center font-weight-bold">
             Knowledge Bilbiotheca
