--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,26 @@
 <section *ngIf="viewReady" [ngStyle]="backgroundStyles">
   <!-- i've made a tipster component to evolve to a generic tipster -->
-  <app-tipster [config]="tipsterConfig"></app-tipster>
+  <app-tipster *ngIf="!deviceIsMobile" [config]="tipsterConfig"></app-tipster>
   <div class="section-overlay">
     <div class="input-area-wrapper text-center">
       <h1 class="text-center">
         I would like to <br /> <strong>learn more</strong> about
       </h1>
       <br />
-      <h1 class="input-area-blinking-dash dash_blink"> {{searchParameter}} _</h1>
+      <h1 *ngIf="!deviceIsMobile"  class="input-area-blinking-dash dash_blink"> {{searchParameter}} _</h1>
+      <div class="col-sm-12 col-md-4 offset-md-4">
+        <div class="form-group">
+          <select class="custom-select" [(ngModel)]="categoryType" (ngModelChange)="navigateToCategory (categoryType)">
+            <option selected="" value="0">Select a category</option>
+            <option value="Programming">Programming</option>
+            <option value="History">History</option>
+            <option value="Philosophy">Philosophy</option>
+            <option value="Science">Science</option>
+            <option value="Mathematics">Mathematics</option>
+            <option value="Politics">Politics</option>
+          </select>
+        </div>
+      </div>
     </div>
   </div>
   <div class="loader-wrapper" *ngIf="!viewReady">
