--- a/src/app/components/user-authenticated/user-authenticated.component.html
+++ b/src/app/components/user-authenticated/user-authenticated.component.html
@@ -1,6 +1,6 @@
 <div class="auth-user"(mouseenter)="userMenuVisibility(true)" (click)="userMenuVisibility(true)">
-  <div class="col-md-12 text-right">
-    <h5>Hello, {{authenticatedUser.user.name}}</h5>
+  <div class="col-xs-4 offset-xs-8 col-md-12 text-right">
+    <h5 *ngIf="!deviceIsMobile">Hello, {{authenticatedUser.user.name}}</h5>
     <img [src]="authenticatedUser.user.picture" id="auth-user-avatar" />
   </div>
   <div *ngIf="userMenuVisible" id="auth-user-menu" (mouseleave)="userMenuVisibility(false)" [@menuSlide]>
@@ -9,13 +9,6 @@
         <a [routerLink]="['/shopping-cart']">
           <div class="col-md-12">
             <i class="demo-icon icon-basket"></i> <h6>My Shopping Cart</h6>
-          </div>
-        </a>
-      </div>
-      <div class="auth-user-menu-item">
-        <a [routerLink]="['/my-account']">
-          <div class="col-md-12">
-            <i class="demo-icon icon-address-card"></i> <h6>My Account</h6>
           </div>
         </a>
       </div>
