LoggedUser bug on book card

--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -20,7 +20,7 @@
             <app-basket  [book]="book"></app-basket>
           </div>
         </div>
-        <app-book style="width: 100%"  [book]="book"></app-book>
+        <app-book style="width: 100%"  *ngIf="!user" [book]="book"></app-book>
       </div>
     </div>
     <div class="clearfix"></div>
