--- a/src/app/components/book/book.component.html
+++ b/src/app/components/book/book.component.html
@@ -1,19 +1,9 @@
-<button class="btn btn-block btn-info" (click)="viewBookDetail(book)">
-  <i class="icon-search"></i> Detail
-</button>
-
-<div *ngIf="detail" [@fade]>
-  <div class="modal-backdrop"></div>
-  <div class="modal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button class="close" aria-label="Close" (click)="userModalLoginVisibility(false)">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body" style="max-height: 400px; overflow: auto;">
-          <h5 class="modal-title">{{book.volumeInfo.title}}</h5>
+<section>
+  <div class="col-md-12">
+    <div class="card border-secondary">
+      <div class="card-header">{{book.volumeInfo.title}}</div>
+      <div class="card-body text-secondary">
+        <div class="col-md-12">
           <hr>
           <div class="text-center">
             <img src="{{book.volumeInfo.imageLinks.thumbnail}}" alt="">
@@ -21,8 +11,6 @@
           <hr>
           <p>{{book.volumeInfo.description}}</p>
           <hr>
-        </div>
-        <div>
           <div class="form-group">
             <hr>
             <select class="custom-select" [(ngModel)]="paymentType">
@@ -41,4 +29,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
