--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark  navbar-rd">
   <div class="col-sm-6">
     <a [routerLink]="['/home']">
-      <h3>Knowledge <strong>Bilbiotheca</strong></h3>
+      <h3><strong>Bilbiotheca</strong></h3>
     </a>
   </div>
   <div class="col-sm-6">
