--- a/src/app/components/book-card/book-card.component.css
+++ b/src/app/components/book-card/book-card.component.css
@@ -14,7 +14,7 @@
     margin-top: 15px;
   }
 }
-@media {min-width: 700px} {
+@media (min-width: 700px) {
   .button-row {
     position: absolute;
     bottom: 5px;
