--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -1,14 +1,14 @@
 <div class="card border-secondary">
-  <div class="card-header">{{book.volumeInfo.title}}</div>
+  <div class="card-header" [innerHTML]="book['volumeInfo']['title']"></div>
   <div class="card-body text-secondary">
     <div class="row">
       <div class="col-xs-3 col-md-3 text-center">
-        <img src="{{book.volumeInfo.imageLinks.thumbnail}}" class="img-thumbnail"  alt="">
+        <img [src]="book['volumeInfo']['imageLinks']['thumbnail']" class="img-thumbnail"  alt="">
       </div>
       <div class="col-xs-9 col-md-9">
         <div class="row">
           <div class="col-md-12">
-            <p class="card-text">{{book.volumeInfo.description | substr}}</p>
+            <p class="card-text" [innerHTML]="book['volumeInfo']['description'] | substr"></p>
           </div>
           <div class="clearfix"></div>
         </div>
@@ -24,7 +24,15 @@
             <app-basket  [book]="book"></app-basket>
           </div>
         </div>
-        <app-book style="width: 100%"  *ngIf="!user" [book]="book"></app-book>
+        <div class="row button-row"  *ngIf="!user">
+          <div class="col-md-12">
+            <a href="/book/{{book.id}}">
+              <button class="btn btn-block btn-info">
+                <i class="icon-search"></i> Detail
+              </button>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="clearfix"></div>
