--- a/src/app/components/book-list/book-list.component.css
+++ b/src/app/components/book-list/book-list.component.css
@@ -5,6 +5,11 @@ section {
   width: 100%;
   height: calc(100% - 40px);
 }
+@media (max-width: 700px) {
+  section {
+    margin-top: 5px;
+  }
+}
 h4 {
   display: inline-block;
 }
