Luhn ALogirthm to validate cc | missing check on pay click action

--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -38,7 +38,7 @@
       <hr>
     </div>
     <div class="col-md-3">
-      <app-checkout [numberOfBooks]="myBasket['count']" [totalAmount]="total"></app-checkout>
+      <app-checkout [basket]="myBasket" [totalAmount]="total"></app-checkout>
     </div>
   </div>
   <app-tipster [config]="tipsterConfig" *ngIf="showTip"></app-tipster>
