--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -9,7 +9,7 @@
         <ul class="list-group">
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Total Books:
-            <span class="badge badge-primary badge-pill">{{numberOfBooks}}</span>
+            <span class="badge badge-primary badge-pill">{{basket['count']}}</span>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Total Price
@@ -17,7 +17,7 @@
           </li>
         </ul>
         <hr>
-        <app-payment-gateway [total]="totalAmount"></app-payment-gateway>
+        <app-payment-gateway [total]="totalAmount" [basket]="basket"></app-payment-gateway>
       </div>
     </div>
   </div>
