--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -6,13 +6,13 @@
     <div class="col-md-12" *ngIf="deviceIsMobile">
       <div class="form-group">
         <select class="custom-select" [(ngModel)]="categoryType" (ngModelChange)="navigateToCategory (categoryType)">
-          <option selected="" value="0">Select a category</option>
-          <option value="Programming">Programming</option>
-          <option value="History">History</option>
-          <option value="Philosophy">Philosophy</option>
-          <option value="Science">Science</option>
-          <option value="Mathematics">Mathematics</option>
-          <option value="Politics">Politics</option>
+          <option selected="" value="0">{{ 'HOME.SELECT_A_CATEGORY' | translate }}</option>
+          <option value="{{ 'HOME.PROGRAMMING' | translate }}">{{ 'HOME.PROGRAMMING' | translate }}</option>
+          <option value="{{ 'HOME.HISTORY' | translate }}">{{ 'HOME.HISTORY' | translate }}</option>
+          <option value="{{ 'HOME.PHILOSOPHY' | translate }}">{{ 'HOME.PHILOSOPHY' | translate }}</option>
+          <option value="{{ 'HOME.SCIENCE' | translate }}">{{ 'HOME.SCIENCE' | translate }}</option>
+          <option value="{{ 'HOME.MATHEMATICS' | translate }}">{{ 'HOME.MATHEMATICS' | translate }}</option>
+          <option value="{{ 'HOME.POLITICS' | translate }}">{{ 'HOME.POLITICS' | translate }}</option>
         </select>
       </div>
     </div>
