--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,19 +1,19 @@
 <section>
   <div class="checkout">
     <div class="col-sm-12">
-      <h1 class="display-5">Checkout:</h1>
+      <h1 class="display-5">{{ 'CHECKOUT.CHECKOUT' | translate }}:</h1>
       <hr>
     </div>
     <div class="col-sm-12">
       <div class="shop-cart">
         <ul class="list-group">
           <li class="list-group-item d-flex justify-content-between align-items-center">
-            Total Books:
+            {{ 'CHECKOUT.TOTAL_BOOKS' | translate }}:
             <span class="badge badge-primary badge-pill">{{basket['count']}}</span>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
-            Total Price
-            <span class="badge badge-primary badge-pill">$ {{totalAmount}}</span>
+            {{ 'CHECKOUT.TOTAL_PRICE' | translate }}
+            <span class="badge badge-primary badge-pill">{{ 'CHECKOUT.COIN' | translate }} {{totalAmount}}</span>
           </li>
         </ul>
         <hr>
