i18n and Angular, Angular CLI and Typescript update done!

--- a/src/app/components/payment-gateway/payment-gateway.component.html
+++ b/src/app/components/payment-gateway/payment-gateway.component.html
@@ -63,7 +63,7 @@
                   </div>
                   <div>
                     <button id="payment-button" class="btn btn-lg btn-info btn-block" (click)="userModalLoginVisibility(false)">
-                      <span id="payment-button-amount">{{ 'CHECKOUT.PAY' | translate }} $ {{total}}</span>
+                      <span id="payment-button-amount">{{ 'CHECKOUT.PAY' | translate }} {{ 'CHECKOUT.COIN' | translate }} {{total}}</span>
                     </button>
                   </div>
                 </div>
