--- a/src/app/components/checkout/checkout.component.css
+++ b/src/app/components/checkout/checkout.component.css
@@ -1,9 +1,11 @@
-section {
-  position: fixed;
-  right: 10px;
-  width: 25%;
-}
+@media (min-width: 750px) {
+  section {
+    position: fixed;
+    right: 10px;
+    width: 25%;
+  }
 
+}
 .shop-cart {
   border: 1px solid #593196;
   padding: 10px;
