--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-xs-12 col-md-9">
       <div class="col-sm-12">
         <h1 class="display-5">{{ 'SHOPPING_CART.SHOPPING_CART' | translate }}:</h1>
         <hr>
@@ -37,7 +37,7 @@
       </div>
       <hr>
     </div>
-    <div class="col-md-3">
+    <div class="col-xs-12 col-md-3">
       <app-checkout [basket]="myBasket" [totalAmount]="total"></app-checkout>
     </div>
   </div>
